--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "todolist-v1",
+  "name": "ejs-challenge",
   "version": "1.0.0",
-  "description": "This is a Todo List App",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Olatunji Olayinka",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.18"
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "lodash": "^4.17.11"
   }
 }
